processor/src/fast/tests/snapshots/miden_processor__fast__tests__masm_consistency__fast::tests::masm_consistency::test_masm_consistency::case_01.snap
---
source: processor/src/fast/tests/masm_consistency.rs
expression: fast_stack_outputs
---
StackOutputs {
    elements: [
        16,
        16,
        16,
        16,
        16,
        16,
        16,
        17,
        16,
        16,
        16,
        16,
        16,
        16,
        0,
        16,
    ],
}
