processor/src/fast/tests/snapshots/miden_processor__fast__tests__masm_consistency__fast::tests::masm_consistency::test_masm_consistency::case_02.snap
---
source: processor/src/fast/tests/masm_consistency.rs
expression: fast_stack_outputs
---
StackOutputs {
    elements: [
        0,
        0,
        0,
        0,
        16,
        16,
        16,
        16,
        16,
        16,
        16,
        16,
        16,
        16,
        16,
        16,
    ],
}
