processor/src/fast/tests/snapshots/miden_processor__fast__tests__masm_consistency__fast::tests::masm_consistency::test_masm_consistency::case_06.snap
---
source: processor/src/fast/tests/masm_consistency.rs
expression: fast_stack_outputs
---
StackOutputs {
    elements: [
        32,
        16,
        16,
        16,
        16,
        16,
        16,
        100,
        16,
        16,
        16,
        16,
        16,
        16,
        16,
        0,
    ],
}
