processor/src/fast/tests/snapshots/miden_processor__fast__tests__masm_consistency__fast::tests::masm_consistency::test_masm_consistency::case_24.snap
---
source: processor/src/fast/tests/masm_consistency.rs
expression: fast_stack_outputs
---
StackOutputs {
    elements: [
        16,
        15,
        14,
        13,
        12,
        11,
        10,
        9,
        8,
        7,
        6,
        5,
        4,
        40,
        55661831888,
        21043954216,
    ],
}
