processor/src/fast/tests/snapshots/miden_processor__fast__tests__masm_consistency__fast::tests::masm_consistency::test_masm_consistency::case_26.snap
---
source: processor/src/fast/tests/masm_consistency.rs
expression: fast_stack_outputs
---
StackOutputs {
    elements: [
        13511879865802480494,
        4400220401250947688,
        8500586893633738885,
        16054868692214449089,
        10848781138570737177,
        15934329956401167084,
        9230140683782901003,
        13125330888172731164,
        8497894929572821131,
        8302268534614951203,
        9294901175154760611,
        11325655596172844148,
        0,
        0,
        0,
        0,
    ],
}
